href problem fixed on mobile and desktop mobile transitions fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,37 +7,34 @@
 .about-main {
   width: 100%;
   height: 100%;
-  background-color: #B2DFDB;
-  display: flex;
-  justify-content: center; }
-
-.about-picture {
-  position: relative;
-  margin: 0 auto;
-  bottom: -75px;
-  max-width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background: url("../img/profile3.png") center/cover no-repeat;
-  border: 5px #FFF solid; }
-
-.profile-picture {
-  max-width: 100%;
-  height: auto; }
-
-.main-text {
-  width: 70%;
-  padding-top: 200px; }
-
-.text {
-  line-height: 1rem;
-  padding-bottom: 20px; }
+  background-color: #B2DFDB; }
 
 .back {
   color: #0ff;
   position: absolute;
   top: 10px;
   left: 10px; }
+
+.test {
+  font-size: 26px;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  text-decoration: none;
+  color: white; }
+
+@media (max-device-width: 560px) {
+  .about-header {
+    width: 100%;
+    height: 200px;
+    background-color: #009688; }
+  .about-main {
+    width: 100%;
+    height: 100%;
+    background-color: #B2DFDB;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end; } }
 
 .skills-header {
   display: block;
@@ -48,9 +45,7 @@
 .skills-main {
   width: 100%;
   height: 100%;
-  background-color: #80cbc4;
-  display: flex;
-  justify-content: center; }
+  background-color: #80cbc4; }
 
 .experience-header {
   display: block;
@@ -61,9 +56,7 @@
 .experience-main {
   width: 100%;
   height: 100%;
-  background-color: #26A69A;
-  display: flex;
-  justify-content: center; }
+  background-color: #26A69A; }
 
 .education-header {
   display: block;
@@ -74,9 +67,12 @@
 .education-main {
   width: 100%;
   height: 100%;
-  background-color: #4DB6AC;
-  display: flex;
-  justify-content: center; }
+  background-color: #4DB6AC; }
+
+.education-home {
+  width: 100%;
+  height: 100%;
+  background-color: #00796b; }
 
 /* TODO(sgomes): Figure out what to do about desktop font sizes. */
 /* TODO(sgomes): Figure out what to do about i18n and i18n font sizes. */
@@ -260,6 +256,18 @@
   box-sizing: border-box;
   font-family: "Roboto", Serif; }
 
+.blocker {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  display: none; }
+
+.clicked .blocker {
+  display: block; }
+
 .barba-container {
   display: block;
   position: fixed;
@@ -283,3 +291,10 @@
   left: 0;
   background-position: center center;
   background-size: cover; }
+
+@media (max-device-width: 560px) {
+  .section-main {
+    display: block;
+    height: 25vh;
+    width: 100%;
+    position: relative; } }
